# vexa

./: .gitignore  .gitmodules  02.ipynb  BUILT-WITH-VEXA.md  DEPLOYMENT.md  MIGRATION_SUMMARY.md  Makefile  PERFORMANCE_TESTING.md  PLAN.md  RAILWAY_DEPLOYMENT.md  README.md  alembic.ini  docker-compose.yml  download_model.py  env-example  env-example.cpu  env-example.gladia  env-example.gpu  local_development.md  manage_users.ipynb  migrate_to_gladia.sh  multitests.ipynb  notes.md  planstate.md  railway.json  requirements.txt  run_vexa_interaction.sh  start_cpu_dev.sh  system-design.md  test_gladia_service.py  tests.ipynb  traefik.toml  transcript.txt  vexa_client.py
debug/: launch_bots.py
docs/: user_api_guide.md
helm/vexa/: Chart.yaml  values.yaml
k8s/: cluster-autoscaler.yaml  namespace.yaml
libs/shared-models/: add_meeting_data_column.sql  pyproject.toml
libs/shared-models/alembic/: env.py  script.py.mako
libs/shared-models/alembic/versions/: 5befe308fa8b_add_data_field_to_users_table.py  db8b04f8e267_initial_migration_with_all_current_.py  dc59a1c03d1f_add_meeting_data_jsonb_column.py
libs/shared-models/shared_models/: database.py  models.py  schemas.py
services/WhisperLive/: Dockerfile.cpu  Dockerfile.project  README.md  healthcheck.sh  run_server.py
services/admin-api/: Dockerfile  requirements.txt
services/api-gateway/: Dockerfile  main.py  railway.json  requirements.txt
services/bot-manager/: Dockerfile  auth.py  config.py  docker_utils.py  main.py  redis_utils.py  requirements.txt
streaming-component/: package-lock.json  package.json
(+79 files in other folders)
