[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-models"
version = "0.1.0"
authors = [
  { name="Vexa Team", email="support@vexa.ai" },
]
description = "Shared database models and schemas for the Vexa project"
readme = "README.md"
requires-python = ">=3.9" # Adjust Python version as needed
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.27.0",
    "pydantic>=1.10.7,<2.0.0", # Pinning major version based on bot-manager
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.8", # Required by sqlalchemy/databases
    "databases[asyncpg]>=0.5.0", # Looks like 'databases' library is also used
    "alembic>=1.10.0" # For database migrations
]

[project.urls]
"Homepage" = "https://github.com/Vexa-ai/vexa"
"Bug Tracker" = "https://github.com/Vexa-ai/vexa/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_models", "shared_models.*"]
